--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+		   <groupId>com.vladmihalcea</groupId>
+		   <artifactId>hibernate-types-52</artifactId>
+		   <version>2.9.12</version>
+		</dependency>
+		<dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-java8</artifactId>
+	    </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
